Fix sidebar and theme toggles: fixed to viewport, theme outside wrap

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -130,10 +130,6 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0;
 }
 
-.masthead .container {
-  position: relative;
-}
-
 @media (max-width: 48em) {
   .masthead-title {
     text-align: center;
@@ -235,9 +231,10 @@ a.sidebar-nav-item:focus {
 
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
-  position: absolute;
+  position: fixed;
   top:  .8rem;
   left: 1rem;
+  z-index: 10;
   display: flex;
   align-items: center;
   padding: .25rem .75rem;
@@ -268,14 +265,9 @@ a.sidebar-nav-item:focus {
   background: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M2.5 11.5A.5.5 0 013 11h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 7h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 3h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5z' clip-rule='evenodd'/%3E%3C/svg%3E") no-repeat;
 }
 
-@media (min-width: 30.1em) {
-  .sidebar-toggle {
-    position: fixed;
-  }
-}
-
 @media print {
-  .sidebar-toggle {
+  .sidebar-toggle,
+  .theme-toggle {
     display: none;
   }
 }
